--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	<!-- FullScreen -->
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">我不知道教什麼</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Clean & minimal Theme</h3>
+			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">我不知道寫什麼</h1>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Ohhhhhhhhhhhh</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
 				</li>
