--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<!-- FullScreen -->
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">我不知道寫什麼</h1>
+			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">這是一個神奇的地方</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Ohhhhhhhhhhhh</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
@@ -86,17 +86,17 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">Flatfy</a>
+				<a class="navbar-brand" href="#home">神奇霹靂啪啦</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					
-					<li class="menuItem"><a href="#whatis">What is?</a></li>
-					<li class="menuItem"><a href="#useit">Use It</a></li>
-					<li class="menuItem"><a href="#screen">Screenshot</a></li>
-					<li class="menuItem"><a href="#credits">Credits</a></li>
-					<li class="menuItem"><a href="#contact">Contact</a></li>
+					<li class="menuItem"><a href="#whatis">奇妙ONE</a></li>
+					<li class="menuItem"><a href="#useit">奇妙TWO</a></li>
+					<li class="menuItem"><a href="#screen">奇妙THREE</a></li>
+					<li class="menuItem"><a href="#credits">奇妙FOUR</a></li>
+					<li class="menuItem"><a href="#contact">奇妙FIVE</a></li>
 				</ul>
 			</div>
 		   
