--- a/index.html
+++ b/index.html
@@ -178,13 +178,10 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Full Responsive</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+                    <h3 class="section-heading">新西遊記</h3>
+					<div class="sub-title lead3">偶喜翻的韓綜<br>第九季要來拉拉拉拉拉拉拉拉拉</div>
                     <p class="lead">
-						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
-						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
-						uam non erat mirum sapientiae lorem cupido
-						patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
+						《真實狗血冒險動作片「新西遊記」》，簡稱《新西遊記》，是自2015年起播出的韓國真人實境綜藝節目，由羅䁐錫導演製作，至今已播出八季。節目設定源自中國古典文學名著《西遊記》及日本經典漫畫《七龍珠》，成員於旅行期間需完成不同任務以獲得龍珠，成功集齊七顆龍珠可召喚出龍神，由節目組為每位成員實現一個願望。初始節目成員為姜鎬童、李壽根、殷志源、李昇基，其後先後加入新成員包括安宰賢、圭賢、宋旻浩及P.O。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
