--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
                     <h3 class="section-heading">新西遊記</h3>
 					<div class="sub-title lead3">偶喜翻的韓綜<br>第九季要來拉拉拉拉拉拉拉拉拉</div>
                     <p class="lead">
-						《真實狗血冒險動作片「新西遊記」》，簡稱《新西遊記》，是自2015年起播出的韓國真人實境綜藝節目，由羅䁐錫導演製作，至今已播出八季。節目設定源自中國古典文學名著《西遊記》及日本經典漫畫《七龍珠》，成員於旅行期間需完成不同任務以獲得龍珠，成功集齊七顆龍珠可召喚出龍神，由節目組為每位成員實現一個願望。初始節目成員為姜鎬童、李壽根、殷志源、李昇基，其後先後加入新成員包括安宰賢、圭賢、宋旻浩及P.O。
+						《真實狗血冒險動作片「新西遊記」》，簡稱《新西遊記》，是自2015年起播出的韓國真人實境綜藝節目，由羅䁐錫導演製作，至今已播出八季。
+						節目設定源自中國古典文學名著《西遊記》及日本經典漫畫《七龍珠》，成員於旅行期間需完成不同任務以獲得龍珠，成功集齊七顆龍珠可召喚出龍神，由節目組為每位成員實現一個願望。
+						初始節目成員為姜鎬童、李壽根、殷志源、李昇基，其後先後加入新成員包括安宰賢、圭賢、宋旻浩及P.O。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
@@ -217,13 +219,13 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Drag Gallery</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+                    <h3 class="section-heading">姜食堂</h3>
+					<div class="sub-title lead3">新西遊記的外傳<br>出生於MINO的神奇手指</div>
                     <p class="lead">
-						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
-						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
-						uam non erat mirum sapientiae lorem cupido
-						patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
+						在拍攝節目第四季期間，成員姜鎬童及李壽根曾開玩笑提議仿效另一人氣節目《尹食堂》，開設屬於成員的餐廳，並按姜鎬童的名字取名為「姜食堂」。其後由於成員成功完成任務並集齊七顆龍珠，節目組除了答應拍攝《姜食堂》。
+						2017年12月5日，《姜食堂》接續《花樣青春 WINNER》作為《新西遊記》第二個外傳節目首播。由於圭賢正服兵役，《姜食堂》由《新西遊記4》其餘五位成員出演。
+						2018年12月2日播出的《新西遊記6》導演版中，羅䁐錫導演於拍攝《新西遊記5》前已向節目成員透露將製作新一季的《姜食堂》。連同本季嘉賓出演的P.O，全體成員均會出演《姜食堂》第二季。在拍攝《姜食堂2》期間，早前因服兵役而暫時退出《新西遊記》的圭賢於退伍後第二天加入拍攝工作。
+						2019年5月31日，《姜食堂2》作為《新西遊記》第三個外傳節目首播，圭賢一同參與的錄製過程則延續《新西遊記5》及《新西遊記6》的播出模式，於《姜食堂2》結束後接續以《姜食堂3》的名義播出。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
