--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
                 </div>
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Font Awesome & Glyphicon</h3>
-                    <p class="lead">A special thanks to Death to the Stock Photo for 
-					providing the photographs that you see in this template. 
+                    <h3 class="section-heading">春季露營</h3>
+                    <p class="lead">此節目為製作組以準備《新西遊記9》的心情和《新西遊記》成員們一起進行的間歇訓練，講述成員們迎接春天去露營的故事。
+						起初節目組公開的預告片段及海報只包含姜鎬童、李壽根、殷志源、圭賢、宋旻浩及P.O六名成員，直至4月30日宣佈安宰賢正式加入《春季露營》，這也是安宰賢經歷離婚風波而缺席《新西遊記7》及《新西遊記8》兩季節目後時隔一年半重返《新西遊記》團隊。 
 					</p>
 					
 					<ul class="descp lead2">
-						<li><i class="glyphicon glyphicon-signal"></i> Reliable and Secure Platform</li>
-						<li><i class="glyphicon glyphicon-refresh"></i> Everything is perfectly orgainized for future</li>
-						<li><i class="glyphicon glyphicon-headphones"></i> Attach large file easily</li>
+						<li><i class="glyphicon glyphicon-signal"></i> QQ</li>
+						<li><i class="glyphicon glyphicon-refresh"></i> 安安終於回來了</li>
+						<li><i class="glyphicon glyphicon-headphones"></i> 7位成員全員到齊!!!!</li>
 					</ul>
 				</div>           
             </div>
