--- a/index.html
+++ b/index.html
@@ -203,17 +203,17 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-						<a href="img/iphone.png" class="image-link">
+						<a href="img/ipad.jpg" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/ipad.jpg" alt="">
 							</div>
 						</a>
-						<a href="img/iphone.png" class="image-link">
+						<a href="img/ipad.jpg" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/ipad.jpg" alt="">
 							</div>
 						</a>
-						<a href="img/iphone.png" class="image-link">
+						<a href="img/ipad.jpg" class="image-link">
 							<div class="item">
 								<img  class="img-responsive img-rounded" src="img/ipad.jpg" alt="">
 							</div>
