--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-						<a href="img/ipad.jpg" class="image-link">
+						<a href="img/OIP.jpg" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/ipad.jpg" alt="">
+								<img  class="img-responsive img-rounded" src="img/OIP.jpg" alt="">
 							</div>
 						</a>
-						<a href="img/ipad.jpg" class="image-link">
+						<a href="img/R.jpg" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/ipad.jpg" alt="">
+								<img  class="img-responsive img-rounded" src="img/R.jpg" alt="">
 							</div>
 						</a>
 						<a href="img/ipad.jpg" class="image-link">
