--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
                     <h3 class="section-heading">《姜食堂》</h3>
-                    <p class="lead">第四季由於成員成功完成任務並集齊七顆龍珠，節目組除了答應拍攝《姜食堂》。
+                    <p class="lead">第四季由於成員成功完成任務並集齊七顆龍珠，節目組答應拍攝《姜食堂》實現願望。
 					</p>
 					
 					<ul class="descp lead2">
