--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-						<a href="img/iphone.png" class="image-link">
+						<a href="img/OIP.jpg" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/OIP.jpg" alt="">
 							</div>  
 						</a>
 					</div>       
