--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="row">
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
+				  <img class="rotate" src="img/tweet.jpg" alt="Generic placeholder image">
 				  <h3>《美少女戰士》</h3>
 				  <p class="lead">「我是維護愛與正義的水手服美少女戰士－月光仙子，我要代替月亮來懲罰你！」</p>
 
@@ -124,7 +124,7 @@
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
+				  <img  class="rotate" src="img/doremi.jpg" alt="Generic placeholder image">
 				   <h3>《小魔女DoReMi》</h3>
 				   <p class="lead">「霹靂卡霹靂拉拉 波波力那貝貝魯多」 </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
