--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <h3 class="section-heading">《你知道ㄇ?》</h3>
 					<div class="sub-title lead3">樹懶的各種大小事~</div>
                     <p class="lead">
-						1.樹懶很會游泳，在水裡可是憋氣高手，可憋氣40分鐘!
+					</p>1.樹懶很會游泳，在水裡可是憋氣高手，可憋氣40分鐘!
 					</p>2.一天睡15-20個小時
 				</p>3.吃一片葉子要消化三個月
 			</p>4.90%時間在樹上，大便的時候會下來地面
