--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
-					 <a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a></p>
+					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E6%A0%91%E6%87%92" role="button">Visit Website</a></p>
 				</div>  			
 			</div>
         </div>
