--- a/index.html
+++ b/index.html
@@ -204,20 +204,26 @@
                      <div id="owl-demo-1" class="owl-carousel">
 						<a href="img/OIP.jpg" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/OIP.jpg" alt="">
+								<img  class="img-responsive img-rounded" src="img/giphy.gif" alt="">
 							</div>  
 						</a>
 					</div>       
                 </div>
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">《\》</h3>
-					<div class="sub-title lead3">c~</div>
-                    <p class="lead">#7BB0A8
-					</p>
-
+                    <h3 class="section-heading">《你知道ㄇ?》</h3>
+					<div class="sub-title lead3">冰棒的來源</div>
+                    <p class="lead">
+					</p>冰棒人人都愛，但你知道嗎，冰棒是小孩發明的ㄛ
+				</p>在1905年，11歲男童埃珀森（Frank Epperson）意外地發明了冰棒。
+			</p>有一天下午，埃珀森自己做了檸檬蘇打水，
+		</p>但當他晚上進到屋內時，他不慎將他的飲料和木製攪拌棒遺忘在門廊上。
+	</p>當他隔天早上發現時，他的飲料已經因為晚上的低溫而結冰，冰上還插著木製攪拌棒。
+</p>埃珀森手持攪拌棒作為握柄，嘗了一嘗這個意外發明的冰品，感覺還不錯。
+</p>就這樣，冰棒就誕生了。
+</p>
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
-					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E6%A0%91%E6%87%92" role="button">Visit Website</a></p>
+					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E5%86%B0%E6%A3%92" role="button">Visit Website</a></p>
 				</div>  			
 			</div>
         </div>
