--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	</p>
 
 					 <p>
-					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E6%A0%91%E6%87%92" role="button">Visit Website</a></p>
+					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E6%A0%91%E6%87%92" role="button">Visit wikipedia</a></p>
 				</div>   
             </div>
         </div>
@@ -223,7 +223,7 @@
 </p>就這樣，冰棒就誕生了。
 </p>
 					 <p>
-					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E5%86%B0%E6%A3%92" role="button">Visit Website</a></p>
+					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E5%86%B0%E6%A3%92" role="button">Visit wikipedia</a></p>
 				</div>  			
 			</div>
         </div>
