--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
                 </div>
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">\</h3>
-                    <p class="lead">#A7DBAB
+                    <h3 class="section-heading">《你聽過ㄇ?》</h3>
+                    <p class="lead">世界上最孤獨的聲音
 					</p>
 					
 					<ul class="descp lead2">
 						<li><i class="glyphicon glyphicon-signal"></i> 耶逼</li>
-						<li><i class="glyphicon glyphicon-refresh"></i> \</li>
 						<li><i class="glyphicon glyphicon-headphones"></i> \</li>
+						<li><i class="glyphicon glyphicon-headphones"></i> <a target="_blank" href="https://www.youtube.com/watch?v=AEvsPjuUqXk"></a> </li>
 					</ul>
 				</div>           
             </div>
