--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/fly.jpg" alt="Generic placeholder image">
 				   <h3>《飛天小女警》</h3>
-				   <p class="lead">「所以，一天又平安的過去了，感謝小女警的努力」  </p>
+				   <p class="lead">「所以，一天又平安的過去了，
+				</p> 感謝小女警的努力」  </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
