--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
                     <h3 class="section-heading">《你聽過ㄇ?》</h3>
-                    <p class="lead">世界上最孤獨的聲音
+                    <p class="sub-title lead3">世界上最孤獨的聲音</div>
 					</p>
 					
 					<ul class="descp lead2">
-						<li><i class="fa-regular fa-lightbulb-exclamation-on"></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
-						<li><i class="fa-regular fa-ear"></i> <a target="_blank" href="https://www.youtube.com/watch?v=AEvsPjuUqXk"></a> </li>
+						<li><i class="glyphicon glyphicon fa-lightbulb-exclamation-on"></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
+						<li><i class="glyphicon glyphicon fa-ear"></i> <a target="_blank" href="https://www.youtube.com/watch?v=AEvsPjuUqXk"></a> </li>
 					</ul>
 				</div>           
             </div>
