--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 					</p>
 					
 					<ul class="descp lead2">
-						<li><i class="glyphicon glyphicon fa-lightbulb-exclamation-on"></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
-						<li><i class="glyphicon glyphicon fa-ear"></i> <a target="_blank" href="https://www.youtube.com/watch?v=AEvsPjuUqXk"></a> </li>
+						<li><i class="glyphicon glyphicon icon"></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
+						<li><i class="glyphicon glyphicon headphone"></i> <a target="_blank" href="https://www.youtube.com/watch?v=AEvsPjuUqXk"></a> </li>
 					</ul>
 				</div>           
             </div>
