--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="css/magnific-popup.css"> 
 	
-	<script src="js/modernizr-2.8.3.min.js"></script>  <!-- Modernizr /-->
+	<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>  <!-- Modernizr /-->
 	<!--[if IE 9]>
 		<script src="js/PIE_IE9.js"></script>
 	<![endif]-->
@@ -246,7 +246,7 @@
 					</p>
 					
 					<ul class="descp lead2">
-						<li><i class="glyphicon glyphicon icon"></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
+						<li><i class="far fa-grimace"></i></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
 						<li><i class="glyphicon glyphicon headphone"></i> </li>
 					</ul>
 				</div>           
