--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 					</p>
 					
 					<ul class="descp lead2">
-						<li><i class="far fa-grimace"></i></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
+						<i class="glyphicon glyphicon-cloud"></i></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
 						<li><i class="glyphicon glyphicon headphones"></i> </li>
 					</ul>
 				</div>           
