--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
                     <h3 class="section-heading">《你聽過ㄇ?》</h3>
                     <p class="sub-title lead3">世界上最孤獨的聲音</div>
-					</p>
+					</p>52赫茲的鯨魚
 					
 					<ul class="descp lead2">
 						<i class="glyphicon glyphicon-hand-right"></i></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
