--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                     <h3 class="section-heading">《你聽過ㄇ?》</h3>
                     <p class="sub-title lead3">世界上最孤獨的聲音</div>
 					</p>52赫茲的鯨魚
-					
-					<ul class="descp lead2">
-						<i class="glyphicon glyphicon-hand-right"></i></i>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音</li>
+				</p>但聽說他現在不孤單了，有聽見了多隻「52 赫茲」同時鳴唱的聲音
+			</p>
+					<ul class="descp lead2">						
 						<li><i class="glyphicon glyphicon-headphones"></i><a target="_blank" href=https://www.youtube.com/watch?v=AEvsPjuUqXk">https://www.youtube.com/watch?v=AEvsPjuUqXk</a> </li>
 					</ul>
 				</div>           
