--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
     <div id ="useit" class="content-section-a">
 
         <div class="container">
+
+			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
+				<h2>奇妙TWO</h2>
+			</div>
 			
             <div class="row">
 			
@@ -259,6 +263,11 @@
 	<!-- Screenshot -->
 	<div id="screen" class="content-section-b">
         <div class="container">
+
+			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
+				<h2>奇妙THREE</h2>
+			</div>
+
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
 				<h2>Screen App</h2>
