--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
 
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
-				<h2>喵喵測驗</h2>
-				<p class="lead" style="margin-top:0">假設你家裡門前出現一隻正等著你的貓咪，你覺得會是以下哪隻貓？</p>
+				<h2>你知道他們ㄇ?</h2>
+				<p class="lead" style="margin-top:0">神妙力量</p>
 			 </div>
 		  </div>
 		    <div class="row wow bounceInUp" >
@@ -300,8 +300,18 @@
 						<img  class="img-responsive img-rounded" src="img/4M.jpg" alt="Owl Image">
 					</div>
 				</a>
-				
+
+				<a href="img/5M.jpg" class="image-link">
+					<div class="item">
+						<img  class="img-responsive img-rounded" src="img/5M.jpg" alt="Owl Image">
+					</div>
+				</a>
                
+				<a href="img/6M.jpg" class="image-link">
+					<div class="item">
+						<img  class="img-responsive img-rounded" src="img/6M.jpg" alt="Owl Image">
+					</div>
+				</a>
               </div>       
           </div>
         </div>
@@ -313,13 +323,13 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>Get Live Updates</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>A 黑貓、B 灰貓、C 茶虎斑貓、D 黑白相間的貓</h2>
+				<p class="lead" style="margin-top:0">請選擇你的貓貓</p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<div class="mockup-content">
 						<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-							<button type="button "><span>Subscribe to our Newsletter</span></button>
+							<button type="button "><span>前往看</span></button>
 							<div class="morph-content">
 								<div>
 									<div class="content-style-form content-style-form-4 ">
