--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
 				<h2>你知道他們ㄇ?</h2>
-				<p class="lead" style="margin-top:0">神妙力量</p>
+				<p class="lead" style="margin-top:0">《神妙力量》</p>
 			 </div>
 		  </div>
 		    <div class="row wow bounceInUp" >
@@ -323,13 +323,13 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>A 黑貓、B 灰貓、C 茶虎斑貓、D 黑白相間的貓</h2>
-				<p class="lead" style="margin-top:0">請選擇你的貓貓</p>
+				<h2>他們是《新西遊記》的吉祥物ㄛ</h2>
+				<p class="lead" style="margin-top:0">想了解更多ㄇ?</p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<div class="mockup-content">
 						<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-							<button type="button "><span>前往看</span></button>
+							<button type="button "><span>前往看更多</span></button>
 							<div class="morph-content">
 								<div>
 									<div class="content-style-form content-style-form-4 ">
