--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 							<div class="morph-content">
 								<div>
 									<div class="content-style-form content-style-form-4 ">
-										<h2 class="morph-clone">Subscribe to our Newsletter</h2>
+										<h2 class="morph-clone">前往看更多</h2>
 										<form>
 											<p><label>Your Email Address</label><input type="text"/></p>
 											<p><button>Subscribe me</button></p>
