--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>他們是《新西遊記》的吉祥物ㄛ</h2>
+				<h2>他們是
+				</P>《新西遊記》的吉祥物ㄛ</h2>
 				<p class="lead" style="margin-top:0">想了解更多ㄇ?</p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
