--- a/index.html
+++ b/index.html
@@ -337,8 +337,9 @@
 									<div class="content-style-form content-style-form-4 ">
 										<h2 class="morph-clone">前往看更多</h2>
 										<form>
-											<p><label>Your Email Address</label><input type="text"/></p>
-											<p><button>Subscribe me</button></p>
+											<p>
+												<a class="btn btn-embossed btn-info" href="https://www.instagram.com/shinmyohan_official/?utm_source=ig_embed&ig_rid=c7666c4c-dfd3-4dfe-91f2-f8661bf5ef66" role="button">Visit instagram</a></p>
+										   </div>
 										</form>
 									</div>
 								</div>
