--- a/index.html
+++ b/index.html
@@ -271,8 +271,7 @@
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
 				<h2>你知道他們ㄇ?</h2>
-				<p class="lead" style="margin-top:0">《神妙力量》</p>
-			 </div>
+				</div>
 		  </div>
 		    <div class="row wow bounceInUp" >
               <div id="owl-demo" class="owl-carousel">
@@ -324,24 +323,10 @@
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
 				<h2>他們是
-				</P>《新西遊記》
-			    </P>的吉祥物ㄛ</h2>
+				</P>《神妙力量》</h2>
 				<p class="lead" style="margin-top:0">想了解更多ㄇ?</p>
 			 </div>
-			<div class="col-md-6 col-md-offset-3 text-center">
-				<div class="mockup-content">
-						<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-							<button type="button "><span>前往看更多</span></button>
-							<div class="morph-content">
-								<div>
-									<div class="content-style-form content-style-form-4 ">
-										<h2 class="morph-clone">前往看更多</h2>
-										<form>
-											<p>
-												<a class="btn btn-embossed btn-info" href="https://www.instagram.com/shinmyohan_official/?utm_source=ig_embed&ig_rid=c7666c4c-dfd3-4dfe-91f2-f8661bf5ef66" role="button">Visit instagram</a></p>
-										   </div>
-										</form>
-									</div>
+				</div>
 								</div>
 							</div>
 						</div>
@@ -357,18 +342,18 @@
 			<div class="row">
 			
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Credits</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>《神妙力量》</h2>
+				<p class="lead" style="margin-top:0">???</p>
 			 </div>
 			 
 				<div class="col-sm-6  block wow bounceIn">
 					<div class="row">
 						<div class="col-md-4 box-icon rotate"> 
-							<i class="fa fa-desktop fa-4x "> </i> 
+							<i class="fas fa-address-card "> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Bootstrap </h3>
-							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
+							<h3> 吉祥物 </h3>
+							<p> 來自於韓國綜藝節目《新西遊記》的吉祥物 </p>
 						</div>
 				  </div>
 			  </div>
@@ -409,6 +394,9 @@
 					</div>
 			  </div>
 		  </div>
+
+		  </div>
+	  </div>
 		</div>
 	</div>
 	
