--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 				<div class="col-sm-6  block wow bounceIn">
 					<div class="row">
 						<div class="col-md-4 box-icon rotate"> 
-							<i class="fas fa-address-card "> </i> 
+							<i class="fas fa-address-card fa-4x"> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
 							<h3> 吉祥物 </h3>
