--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Flatfy Free Flat and Responsive HTML5 Template ">
     <meta name="author" content="">
 
-    <title>余芊慧的HTML練習</title>
+    <title>奇奇怪怪</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -323,7 +323,7 @@
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
 				<h2>他們是
-				</P>《神妙力量》</h2>
+				</P>《神妙力量》家族</h2>
 				<p class="lead" style="margin-top:0">想了解更多ㄇ?</p>
 			 </div>
 				</div>
@@ -348,7 +348,7 @@
 				<div class="col-sm-6  block wow bounceIn">
 					<div class="row">
 						<div class="col-md-4 box-icon rotate"> 
-							<i class="fas fa-address-card fa-4x"> </i> 
+							<i class="fa fa-heart fa-4x"> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
 							<h3> 吉祥物 </h3>
@@ -359,11 +359,12 @@
 			  <div class="col-sm-6 block wow bounceIn">
 					<div class="row">
 					  <div class="col-md-4 box-icon rotate"> 
-						<i class="fa fa-picture-o fa-4x "> </i> 
+						<i class="fa fa-heart fa-4x "> </i> 
 					  </div>
 					  <div class="col-md-8 box-ct">
-						<h3> Owl-Carousel </h3>
-						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p> 
+						<h3> 成員 </h3>
+						<p>隨著節目發展，「神妙力量」的家族成員也不斷增加，
+						</p>現在的家族成員包括父親「神妙力量」、母親「奇妙力量」、神秘旅伴「美妙漢」、沙漠狐「斯達拉」、大兒子、二兒子。</p> 
 					  </div>
 					</div>
 			  </div>
@@ -373,11 +374,11 @@
 				<div class="col-sm-6  block wow bounceIn">
 					<div class="row">
 						<div class="col-md-4 box-icon rotate"> 
-							<i class="fa fa-magic fa-4x "> </i> 
+							<i class="fa fa-heart fa-4x "> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Codrops </h3>
-							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
+							<h3> 動畫 </h3>
+							<p> 他們都會出現在每季的第一集、每集開頭和介紹影片之中，常常會看到牠們可愛的身影，每季都會製作出一個小故事，讓節目主持人去探險。 </p>
 						</div>
 				  </div>
 			  </div>
@@ -387,8 +388,10 @@
 						<i class="fa fa-heart fa-4x "> </i> 
 					  </div>
 					  <div class="col-md-8 box-ct">
-						<h3> Lorem Ipsum</h3>
-						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p> 
+						<h3>官方IG</h3>
+							<ul class="descp lead2">						
+								<li><i class="glyphicon glyphicon-headphones"></i><a target="_blank" href=https://www.instagram.com/shinmyohan_official/?utm_source=ig_embed&ig_rid=93177048-0dca-4571-a22d-4f6ce5b2da68">shinmyohan_official</a> </li>
+							</ul> 
 					  </div>
 					</div>
 			  </div>
