--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 					  <div class="col-md-8 box-ct">
 						<h3> 成員 </h3>
 						<p>隨著節目發展，「神妙力量」的家族成員也不斷增加，
-						</p>現在的家族成員包括父親「神妙力量」、母親「奇妙力量」、神秘旅伴「美妙漢」、沙漠狐「斯達拉」、大兒子、二兒子。</p> 
+							<br/>現在的家族成員包括父親「神妙力量」、母親「奇妙力量」、神秘旅伴「美妙漢」、沙漠狐「斯達拉」、大兒子、二兒子。</p> 
 					  </div>
 					</div>
 			  </div>
@@ -390,7 +390,7 @@
 					  <div class="col-md-8 box-ct">
 						<h3>官方IG</h3>
 							<ul class="descp lead2">						
-								<li><i class="glyphicon glyphicon-headphones"></i><a target="_blank" href=https://www.instagram.com/shinmyohan_official/?utm_source=ig_embed&ig_rid=93177048-0dca-4571-a22d-4f6ce5b2da68">shinmyohan_official</a> </li>
+								<li><i class="glyphicon glyphicon-hand-right"></i><a target="_blank" href=https://www.instagram.com/shinmyohan_official/?utm_source=ig_embed&ig_rid=93177048-0dca-4571-a22d-4f6ce5b2da68">shinmyohan_official</a> </li>
 							</ul> 
 					  </div>
 					</div>
@@ -407,9 +407,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Download Free</h2>
-				<p class="lead" style="margin-top:0">Pay with a Tweet</p>
-				<p><a class="btn btn-embossed btn-primary view" role="button">Free Download</a></p> 
+				<h2>結束</h2>
+				<p class="lead" style="margin-top:0">恭喜看完這個奇怪的網頁</p>
+				<p><a class="btn btn-embossed btn-primary view" role="button">點下去什麼都不會發生</a></p> 
 			 </div>
 			</div>
 		</div>
@@ -421,14 +421,14 @@
 			<div class="row">
 			
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Contact Us</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>不要聯絡我</h2>
+				<p class="lead" style="margin-top:0">Don't contact me</p>
 			</div>
 			
 			<form role="form" action="" method="post" >
 				<div class="col-md-6">
 					<div class="form-group">
-						<label for="InputName">Your Name</label>
+						<label for="InputName">喔齁齁</label>
 						<div class="input-group">
 							<input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
 							<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
@@ -436,7 +436,7 @@
 					</div>
 					
 					<div class="form-group">
-						<label for="InputEmail">Your Email</label>
+						<label for="InputEmail">齁齁喔</label>
 						<div class="input-group">
 							<input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required  >
 							<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
@@ -444,7 +444,7 @@
 					</div>
 					
 					<div class="form-group">
-						<label for="InputMessage">Message</label>
+						<label for="InputMessage">齁喔齁</label>
 						<div class="input-group">
 							<textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
 							<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
@@ -458,19 +458,18 @@
 			<hr class="featurette-divider hidden-lg">
 				<div class="col-md-5 col-md-push-1 address">
 					<address>
-					<h3>Office Location</h3>
-					<p class="lead"><a href="https://www.google.com/maps/preview?ie=UTF-8&q=The+Pentagon&fb=1&gl=us&hq=1400+Defense+Pentagon+Washington,+DC+20301-1400&cid=12647181945379443503&ei=qmYfU4H8LoL2oATa0IHIBg&ved=0CKwBEPwSMAo&safe=on">The Pentagon<br>
-					Washington, DC 20301</a><br>
+					<h3>奇怪Office </h3>
+					<p class="lead"><a href="https://www.bing.com/maps?q=%e4%ba%9e%e6%b4%b2%e5%a4%a7%e5%ad%b8&FORM=HDRSC4">亞洲大學<br>
 					Phone: XXX-XXX-XXXX<br>
 					Fax: XXX-XXX-YYYY</p>
 					</address>
 
-					<h3>Social</h3>
+					<h3>heart</h3>
 					<li class="social"> 
-					<a href="#"><i class="fa fa-facebook-square fa-size"> </i></a>
-					<a href="#"><i class="fa  fa-twitter-square fa-size"> </i> </a> 
-					<a href="#"><i class="fa fa-google-plus-square fa-size"> </i></a>
-					<a href="#"><i class="fa fa-flickr fa-size"> </i> </a>
+					<a href="#"><i class="fa fa-heart fa-size"> </i></a>
+					<a href="#"><i class="fa fa-heart fa-size"> </i> </a> 
+					<a href="#"><i class="fa fa-heart fa-size"> </i></a>
+					<a href="#"><i class="fa fa-heart fa-size"> </i> </a>
 					</li>
 				</div>
 			</div>
