--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
                     <h3 class="section-heading">《你知道ㄇ?》</h3>
 					<div class="sub-title lead3">樹懶的各種大小事~</div>
                     <p class="lead">
-					</p>1. 樹懶很會游泳，在水裡可是憋氣高手，可憋氣40分鐘!
-					</p>2. 一天睡15-20個小時
-				</p>3. 吃一片葉子要消化三個月
-			</p>4. 90%時間在樹上，大便的時候會下來地面
-		</p>5. 交配季節時，母樹懶會在樹上尖叫表示她準備好了
+					</p><br/>1. 樹懶很會游泳，在水裡可是憋氣高手，可憋氣40分鐘!
+					<br/>2. 一天睡15-20個小時
+					<br/>3. 吃一片葉子要消化三個月
+					<br/>4. 90%時間在樹上，大便的時候會下來地面
+					<br/>5. 交配季節時，母樹懶會在樹上尖叫表示她準備好了
 	</p>
 
 					 <p>
@@ -219,13 +219,13 @@
                     <h3 class="section-heading">《你知道ㄇ?》</h3>
 					<div class="sub-title lead3">冰棒的來源</div>
                     <p class="lead">
-					</p>冰棒人人都愛，但你知道嗎，冰棒是小孩發明的ㄛ
-				</p>在1905年，11歲男童埃珀森（Frank Epperson）意外地發明了冰棒。
-			</p>有一天下午，埃珀森自己做了檸檬蘇打水，
-		</p>但當他晚上進到屋內時，他不慎將他的飲料和木製攪拌棒遺忘在門廊上。
-	</p>當他隔天早上發現時，他的飲料已經因為晚上的低溫而結冰，冰上還插著木製攪拌棒。
-</p>埃珀森手持攪拌棒作為握柄，嘗了一嘗這個意外發明的冰品，感覺還不錯。
-</p>就這樣，冰棒就誕生了。
+					</p><br/>冰棒人人都愛，但你知道嗎，冰棒是小孩發明的ㄛ
+					<br/>在1905年，11歲男童埃珀森（Frank Epperson）意外地發明了冰棒。
+					<br/>有一天下午，埃珀森自己做了檸檬蘇打水，
+					<br/>但當他晚上進到屋內時，他不慎將他的飲料和木製攪拌棒遺忘在門廊上。
+					<br/>當他隔天早上發現時，他的飲料已經因為晚上的低溫而結冰，冰上還插著木製攪拌棒。
+					<br/>埃珀森手持攪拌棒作為握柄，嘗了一嘗這個意外發明的冰品，感覺還不錯。
+					<br/>就這樣，冰棒就誕生了。
 </p>
 					 <p>
 					 <a class="btn btn-embossed btn-info" href="https://zh.wikipedia.org/zh-tw/%E5%86%B0%E6%A3%92" role="button">Visit wikipedia</a></p>
